Nav bar & jumbotron mostly matching assignment example across website

--- a/style.css
+++ b/style.css
@@ -1,14 +1,26 @@
 /* OVERALL STYLE CHANGES */
 .nav-bar-name-background {
     font-size: 20pt;
+    font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
     color: white;
     background-color: rgb(89,170,165);
     padding: 15px;
 }
 
+.jumbotron {
+    background-color: white;
+}
+
+.display-4 {
+    font-size: 20pt;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    color: rgb(89,170,165);
+}
+
 .profile-pic {
-    max-height: 300px;
+    max-height: 275px;
 }
 
 /* INDEX SPECIFIC STYLING */
