all 3 pages now have the exact same styling. Projects need to be added.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /* OVERALL STYLE CHANGES */
+body {
+    background-color: lightgrey;
+}
+
 .nav-bar-name-background {
     font-size: 20pt;
     font-weight: bold;
